add missing image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<!-- Work -->
 							<article id="blog">
 								<h2 class="major">Blog</h2>
-								<span class="image main"><img src="images/BlogImage.jpg" alt="" /></span>
+								<span class="image main"><img src="images/BlogImages/BlogImage.jpg" alt="" /></span>
 								<ul>
 									<li><a href="#GPT4-o">16/05/2024 - GPT4-o</a></li>
 									<li><a href="#Mojo">22/05/2024 - Mojo </a></li>
